# Figma-DS-Companion

./: .gitignore  AGENTS.md  pyproject.toml
.github/workflows/: governance.yml
docs/: mcp-setup.md  workspace-guide.md
figma/: README.md
figma/brands/: font-directory.md  font-inventory.yml  registry.yml
figma/components/: index.yml
figma/config/: variable-taxonomy.yml
figma/decisions/: 2026-03-10-brand-color-preview-before-write.md  2026-03-10-brand-color-ramp-governance.md  2026-03-10-brand-color-source-anchor-flexibility.md  2026-03-10-brand-typography-governance.md  2026-03-10-global-and-semantic-collections.md  2026-03-10-global-variable-path-cleanup.md  2026-03-10-initial-global-values-baseline.md  2026-03-10-preserve-original-source-swatches.md  2026-03-10-typography-default-assumptions.md  2026-03-11-brand-foundation-review-readiness.md  2026-03-11-brand-manifest-and-generated-registry-governance.md  2026-03-11-crested-butte-foundations-written-to-figma.md  2026-03-11-crested-butte-staged-foundations-from-source-images.md  2026-03-11-figma-first-governance-exports.md  2026-03-11-heavenly-foundations-written-to-figma.md  2026-03-11-heavenly-staged-foundations-from-source-images.md  2026-03-11-initial-semantic-color-family-model.md  2026-03-11-northstar-foundations-written-to-figma.md  2026-03-11-role-scoped-semantic-typography-ladders.md  2026-03-11-semantic-feedback-color-family-naming.md  2026-03-11-semantic-typography-weight-and-size-aliases.md  2026-03-11-shared-semantic-collections-with-brand-extensions.md  (+45 more)
tests/: test_governance.py
(+225 files in other folders)
