[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vail-resorts-ds-governance"
version = "0.1.0"
description = "Governance tooling for the Vail Resorts Design System"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["scripts*"]
